feat(storage): introduce StorageKey entity and migratge songs to use proper storage key references